--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </tr>
 </table>
 
-<h2 hidden>Game over, refresh to play again if you have alreardy finished your prayers 🧑‍💻 🤖!</h2>
+<h2 hidden>Game over, refresh to play again if you have alreardy finished your prayers 👍 🧑‍💻 🤖!</h2>
 
 <script>
   // Initialization
